--- a/111502_SystemCode(18)/app/src/main/AndroidManifest.xml
+++ b/111502_SystemCode(18)/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.PetsApp">
+        <activity android:name=".MainActivityB"></activity>
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
