--- a/111502_SystemCode(18)/app/src/main/AndroidManifest.xml
+++ b/111502_SystemCode(18)/app/src/main/AndroidManifest.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.system">
-
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+    <uses-permission android:name="android.permission.INTERNET" />
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -10,21 +9,21 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.PetsApp">
         <activity android:name=".MainActivityP"></activity>
-        <activity android:name=".MainActivityO" />
-        <activity android:name=".MainActivityN" />
-        <activity android:name=".MainActivityM" />
-        <activity android:name=".MainActivityL" />
-        <activity android:name=".MainActivityK" />
-        <activity android:name=".MainActivityJ" />
-        <activity android:name=".MainActivityI" />
-        <activity android:name=".MainActivityH" />
-        <activity android:name=".MainActivityG" />
-        <activity android:name=".MainActivityF" />
-        <activity android:name=".MainActivityE" />
-        <activity android:name=".MainActivityD" />
-        <activity android:name=".MainActivityC" />
-        <activity android:name=".MainActivityB" />
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainActivityO" android:exported="true"/>
+        <activity android:name=".MainActivityN" android:exported="true"/>
+        <activity android:name=".MainActivityM" android:exported="true"/>
+        <activity android:name=".MainActivityL" android:exported="true"/>
+        <activity android:name=".MainActivityK" android:exported="true"/>
+        <activity android:name=".MainActivityJ" android:exported="true"/>
+        <activity android:name=".MainActivityI" android:exported="true"/>
+        <activity android:name=".MainActivityH" android:exported="true"/>
+        <activity android:name=".MainActivityG" android:exported="true"/>
+        <activity android:name=".MainActivityF" android:exported="true"/>
+        <activity android:name=".MainActivityE" android:exported="true"/>
+        <activity android:name=".MainActivityD" android:exported="true"/>
+        <activity android:name=".MainActivityC" android:exported="true"/>
+        <activity android:name=".MainActivityB" android:exported="true"/>
+        <activity android:name=".MainActivity" android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
