前端資料更新(殯葬服務)

--- a/111502_SystemCode(18)/app/src/main/AndroidManifest.xml
+++ b/111502_SystemCode(18)/app/src/main/AndroidManifest.xml
@@ -30,7 +30,7 @@
             android:name=".MainActivityJ"
             android:exported="true" />
         <activity
-            android:name=".MainActivityI"
+            android:name=".MainActivityI1"
             android:exported="true" />
         <activity
             android:name=".MainActivityH"
